# Hsp.AbletonLink

./: .gitignore  .gitmodules  Hsp.AbletonLink.sln
Hsp.AbletonLink/: AbletonLink.cs  Hsp.AbletonLink.csproj  LinkState.cs
Hsp.AbletonLink.Native/: CMakeLists.txt  Hsp.AbletonLink.Native.cpp  Hsp.AbletonLink.Native.sln  MyAbletonLink.h
